--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
         </div>
         
         <div id="news">
-        <p><!-- current information that I like -->Since I began this journey I have used Codecademy for it's great tutorials. Galvanize bootcamp in San Francisco is my goal. I bagan Codecademy, learning html and CSS. Then I moved on to JavaScript, jQuery and AngularJS. I finished the tutorial plan that Galvanize has set up when they decided to combine forces with Codecademy. They are still two entities, they just are working together to help people like me. I have also finished the Git tutorial and many of the projects they have set up for most of the languages. I am currently working on Ruby on Rail and Ruby. Also PHP, Python, SQL, Command Line, and always one of the many practice projects. I have slowed down a bit too focus more on what I have learned though. I want to keep from forgetting what I have learned while attempting to learn more than is neccessary in my first few months. I intend on always taking advantage of all the resources out there to be a better full stack programmer. I believe I should take the time to feel comfortable with one group of languages before moving on to others. I say group because of how many will work well with each other and most often are used together. So that is where I am at this point and I will continue to grow and add to this and other attempts to show my skills. </p>
+        <p>Since I began this journey I have used Codecademy for<br>
+        it's great tutorials. Galvanize bootcamp in San Francisco is<br>
+        my goal. I bagan Codecademy, learning html and CSS. Then I <br>
+        moved on to JavaScript, jQuery and AngularJS. I finished the <br>
+        tutorial plan that Galvanize has set up when they decided to <br>
+        combine forces with Codecademy. They are still two entities, <br>
+        they just are working together to help people like me. I have<br>
+        also finished the Git tutorial and many of the projects they<br> have set up for most of the languages. I am currently working on Ruby on Rail and Ruby. Also PHP, Python, SQL, Command Line, and always one of the many practice projects. I have slowed down a bit too focus more on what I have learned though. I want to keep from forgetting what I have learned while attempting to learn more than is neccessary in my first few months. I intend on always taking advantage of all the resources out there to be a better full stack programmer. I believe I should take the time to feel comfortable with one group of languages before moving on to others. I say group because of how many will work well with each other and most often are used together. So that is where I am at this point and I will continue to grow and add to this and other attempts to show my skills. </p>
         </div>
         </div>
                 <!-- Can change names of these id's later -->
